# docs/swagger.yaml
@@ -63,6 +63,19 @@ definitions:
       message:
         type: string
     type: object
+  models.StudyMaterials:
+    properties:
+      document_url:
+        type: string
+      name:
+        type: string
+      subject:
+        type: string
+      subject_category:
+        type: string
+      subjectCode:
+        type: string
+    type: object
 info:
   contact:
     email: probe.eceanitt@gmail.com
@@ -75,6 +88,219 @@ info:
   title: Probe Admin
   version: "1.0"
 paths:
+  /v1/studymaterial/add:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Creates a new study material and adds to Database
+      parameters:
+      - description: Enter material name
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: Enter subject name
+        in: formData
+        name: subject
+        required: true
+        type: string
+      - description: Enter subject code
+        in: formData
+        name: code
+        required: true
+        type: string
+      - description: Choose a category
+        enum:
+        - DIGITAL ELECTRONICS
+        - ANALOG ELECTRONICS
+        - TELECOMMUNICATION
+        - COMMUNICATION CHANNELING
+        - SYSTEM DESIGN AND ARCHITECTURE
+        - BASIC ENGINEERING
+        - MATHEMATICS
+        - OTHERS
+        in: formData
+        name: category
+        required: true
+        type: string
+      - description: Upload Document
+        in: formData
+        name: document
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Add a study material
+      tags:
+      - StudyMaterial
+  /v1/studymaterial/delete/{name}:
+    delete:
+      consumes:
+      - application/json
+      description: Deletes a study material along with its document and remove form
+        Database
+      parameters:
+      - description: Delete study material
+        in: path
+        name: name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Deletes a study material
+      tags:
+      - StudyMaterial
+  /v1/studymaterial/edit/document:
+    put:
+      consumes:
+      - multipart/form-data
+      description: Update a document and update it on Database
+      parameters:
+      - description: Enter the name of material
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: Edit Document
+        in: formData
+        name: document
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Update a study material's document
+      tags:
+      - StudyMaterial
+  /v1/studymaterial/edit/subject:
+    put:
+      consumes:
+      - multipart/form-data
+      description: Updates a subject name and updates to Database
+      parameters:
+      - description: Edit name
+        in: formData
+        name: subject
+        required: true
+        type: string
+      - description: Enter subject code
+        in: formData
+        name: subjectCode
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Updates a studymaterial's subject name
+      tags:
+      - StudyMaterial
+  /v1/studymaterial/get/{name}:
+    get:
+      consumes:
+      - application/json
+      description: Fetches a study material and removes form database
+      parameters:
+      - description: Get study material
+        in: path
+        name: name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.StudyMaterials'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Get a study material
+      tags:
+      - StudyMaterial
+  /v1/studymaterial/getcat/{category}:
+    get:
+      consumes:
+      - application/json
+      description: Fetches all study materials belonging to a category from Database
+      parameters:
+      - description: Get study material from category
+        enum:
+        - DIGITAL ELECTRONICS
+        - ANALOG ELECTRONICS
+        - TELECOMMUNICATION
+        - COMMUNICATION CHANNELING
+        - SYSTEM DESIGN AND ARCHITECTURE
+        - BASIC ENGINEERING
+        - MATHEMATICS
+        - OTHERS
+        in: path
+        name: category
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.StudyMaterials'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Get study materials from a categroy
+      tags:
+      - StudyMaterial
   /v1/team/add:
     post:
       consumes:
